session management added
