# user/route.go
@@ -8,5 +8,6 @@ func Router(app fiber.Router, service *UserServiceImpl) {
 	controller := NewUserController(service)
 	app.Post("/users", controller.CreateUser)
 	app.Post("/login", controller.LoginUser)
+	app.Post("/refresh-token", controller.RefreshToken)
 	// other sample routes
 }
